# referal_system

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: openapi-schema.yml
referal_system/referal_system/: asgi.py  settings.py  urls.py  wsgi.py
referal_system/stakewolle/: apps.py  mixins.py  models.py  serializers.py  templates.py  urls.py  views.py
referal_system/stakewolle/migrations/: 0001_initial.py  0002_referralrelationship.py
